--- a/lectures/2018-09-11 JS - Conditionals/lecture_canvas.html
+++ b/lectures/2018-09-11 JS - Conditionals/lecture_canvas.html
@@ -25,25 +25,57 @@
     //grab a drawing context from our canvas
     var context = canvas.getContext("2d");
     
-    //draw text
-    context.font = "45px Arial";
-    context.fillStyle = "rgb(0,100,0)";
-    context.textAlign = "center";
-    context.fillText("Hello, World", max_width / 2, max_height / 2);
+    //How to define a complex type in JavaScript
+    var my_circle = {
 
-    var x = 0;
-    var y = 0;
+        //format for defining properties:
+        //<name>: <value>
+        width: 25,
+        x: 25,
+        y: 25,
+        dx: 1,
+        dy: 1,
+        fillStyle: "rgb(0,0,255)"
+    };
+
     function renderLoop()
     {
         //ask for a new page in our flip book
         context.clearRect(0, 0, max_width, max_height);
 
-        context.font = "45px Arial";
-        context.fillStyle = "rgb(0,100,0)";
-        context.textAlign = "center";
-        context.fillText("Hello, World", x, y);
-        x++;
-        y++;
+        //draw circle
+        context.beginPath();
+        context.fillStyle = my_circle.fillStyle;
+        context.arc(
+            my_circle.x, 
+            my_circle.y, 
+            my_circle.width/2, 
+            0, 
+            Math.PI * 2, 
+            true);
+        context.fill();
+
+        //move circle
+        my_circle.x += my_circle.dx;
+        my_circle.y += my_circle.dy;
+        var boundary = my_circle.width / 2;
+        if(max_height - boundary < my_circle.y)
+        {
+            my_circle.dy *= -1;
+        }
+        else if(0 + boundary > my_circle.y)
+        {
+            my_circle.dy *= -1;
+        }
+
+        if(max_width - boundary < my_circle.x)
+        {
+            my_circle.dx *= -1;
+        }
+        else if(0 + boundary > my_circle.x)
+        {
+            my_circle.dx *= -1;
+        }
 
         window.requestAnimationFrame(renderLoop);
     }
