--- a/lectures/2018-10-16 JS - Loops 1/lecture.html
+++ b/lectures/2018-10-16 JS - Loops 1/lecture.html
@@ -11,12 +11,28 @@
 <body>
 
 <canvas id="myCanvas" width="480" height="320"></canvas>
+<button id="addBallButton">Add Ball</button>
+<button id="removeBallButton">Remove Ball</button>
 <div id="MouseCoords"></div>
 <script>
 
+   //MIDTERM ON FRIDAY!
+   /*
+   //C++ - based
+   //A main.cpp file is provided to you
+   NO NOTES OR INTERNET OR ANYTHING ELSE IS ALLOWED!
+   //problems:
+      1. Prompt the user for two numbers, output the sum to the screen
+      2. Prompt the user to three numbers, Use logic to determine
+         the smallest number entered.
+      3. Prompt the user for a number.  Output whether it is odd or even.
+      4. Calculate the average of a list of numbers.
+      5. Find the smallest number in a given file, output to other file.
+      6. Calculate and output the Nth number in the Fibonacci sequence.
+   */
+
    //Notes:
    //https://progur.com/2016/10/procedural-generation-create-fractal-trees-javascript.html
-
 
    //Agenda:
    //Use a loop to create N circles
@@ -24,6 +40,9 @@
    //Use a loop to render circles (for...of loops)
    //Count number of ball collisions
 
+   //WHILE Loops in JS are exactly the same as C++
+   //"basic" FOR loops are also nearly identical
+   //for(var i = 0; i < N; i++)
 
     //grab a reference to our canvas
     var canvas = document.getElementById("myCanvas");
@@ -37,6 +56,14 @@
     var mouse_x = 0;
     var mouse_y = 0;
 
+    //use an arry and a loop to create lots of balls
+    var balls = new Array();
+    for(var i = 0; i < 5; i++)
+    {
+       var ball = createBall();
+       balls.push(ball);
+    }
+
     //How to define a complex type in JavaScript
     var first_circle = {
 
@@ -47,56 +74,76 @@
         y: 25,
         dx: 1,
         dy: 1,
-        fillStyle: "rgb(0,0,255)"
+        fillStyle: "rgb(0,0,0)"
     };
 
-    var second_circle = {
-      //format for defining properties:
-      //<name>: <value>
-      width: 25,
-      x: 200,
-      y: 150,
-      dx: 1,
-      dy: 1,
-      fillStyle: "rgb(0,255,0)"
-      };
+   //use buttons to add and remove new balls from the screen
+   var add_button = document.getElementById("addBallButton");
+   var remove_button = document.getElementById("removeBallButton");
 
-      var third_circle = {
-      //format for defining properties:
-      //<name>: <value>
-      width: 25,
-      x: 25,
-      y: 200,
-      dx: 1,
-      dy: 1,
-      fillStyle: "rgb(255,0,0)"
-      };
+   add_button.addEventListener("click", function(evt){
+      var ball = createBall();
+      balls.push(ball);
+   });
+   remove_button.addEventListener("click", function(evt){
+      balls.pop();
+   });
+   canvas.addEventListener("click", function(evt){
+      var rect = canvas.getBoundingClientRect();
+      mouse_x = evt.clientX - rect.left;
+      mouse_y = evt.clientY - rect.top;
+      var ball = createBall();
+      ball.x = mouse_x;
+      ball.y = mouse_y;
+      balls.push(ball);
+   });
 
-      var fourth_circle = {
-      //format for defining properties:
-      //<name>: <value>
-      width: 25,
-      x: 300,
-      y: 125,
-      dx: 1,
-      dy: 1,
-      fillStyle: "rgb(255,255,0)"
+   function createBall()
+   {
+      var red = Math.ceil(Math.random() * 255);
+       var green = Math.ceil(Math.random() * 255);
+       var blue = Math.ceil(Math.random() * 255);
+       var ball = {
+          width: 25,
+          x: Math.ceil(Math.random() * max_width),
+          y: Math.ceil(Math.random() * max_height),
+          dx: 1,
+          dy: 1, 
+          fillStyle: "rgb("+ red +"," + green + "," + blue + ")"
       };
-
+      return ball;
+   }
    function renderLoop()
    {
       //ask for a new page in our flip book
       context.clearRect(0, 0, max_width, max_height);
       draw_circle(first_circle);
-      draw_circle(second_circle);
-      draw_circle(third_circle);
-      draw_circle(fourth_circle);
-      detect_collision(second_circle, first_circle);
-      detect_collision(first_circle, third_circle);
-      detect_collision(second_circle, third_circle);
-      detect_collision(first_circle, fourth_circle);
-      detect_collision(second_circle, fourth_circle);
-      detect_collision(third_circle, fourth_circle);
+
+      //C++ way (and old JS way).  Fine to do.
+      /*
+      for(var i = 0; i < balls.length; i++)
+      {
+         balls[i];
+      }
+      */
+      for(let ball of balls)
+      {
+         draw_circle(ball);
+      }
+
+      /*
+      0: 1, 2, 3
+      1: 2, 3
+      2: 3
+      3
+      */
+      for(var i = 0; i < balls.length; i++)
+      {
+         for(var j = i + 1; j < balls.length; j++)
+         {
+            detect_collision(balls[i], balls[j]);
+         }
+      }
 
       //have first circle follow the mouse
       if(mouse_x > first_circle.x)
@@ -128,6 +175,18 @@
       window.requestAnimationFrame(renderLoop);
    }
 
+   function reverse_direction(direction, speed)
+   {
+      if(direction < 0)
+      {
+         return speed;
+      }
+      else
+      {
+         return -speed;
+      }
+   }
+
    function detect_collision(first_circle, second_circle)
    {
       //check for collision between first and second circle
@@ -137,19 +196,22 @@
 
       if (distance < first_circle.width / 2 + second_circle.width / 2) {
          
+         var first_new_speed = Math.ceil(Math.random() * 5);
+         var second_new_speed = Math.ceil(Math.random() * 5);
+
          //reverse direction
          if((first_circle.dx > 0 && second_circle.dx < 0)
          || (first_circle.dx < 0 && second_circle.dx > 0)
          )
          {
-            first_circle.dx *= -1;
-            second_circle.dx *= -1;
+            first_circle.dx = reverse_direction(first_circle.dx, first_new_speed);
+            second_circle.dx = reverse_direction(second_circle.dx, second_new_speed);
          }
          if((first_circle.dy > 0 && second_circle.dy < 0)
          || (first_circle.dy < 0 && second_circle.dy > 0)
          ){
-            first_circle.dy *= -1;
-            second_circle.dy *= -1;
+            first_circle.dy = reverse_direction(first_circle.dy, first_new_speed);
+            second_circle.dy = reverse_direction(second_circle.dy, second_new_speed);
          }
       }
    }
