added today's final lecture code.

--- a/lectures/2018-11-13 JS - Pong/lecture/lecture.html
+++ b/lectures/2018-11-13 JS - Pong/lecture/lecture.html
@@ -12,6 +12,8 @@
          margin: 0px;
       }
    </style>
+
+   <!-- C++ syntax: #include "localFileName.h"-->
    <script src="scripts/Ball.js"></script>
    <script src="scripts/ComputerPaddle.js"></script>
    <script src="scripts/PlayerPaddle.js"></script>
